@@ -1,3 +1,3 @@
 # metaclipR
 
-`metaclipR` is a package implementing the [METACLIP Provenance Framework](http://metaclip-interpreter.predictia.es/) in the R environment, specially tailored to efficiently deal with the specificities of [`climate4R`](http://www.meteo.unican.es/climate4r), allowing a easier abstraction of command calls and data structures to the entities defined in the [METACLIP vocabularies](https://github.com/Predictia/metaclip).
+`metaclipR` is a package implementing the [METACLIP Provenance Framework](http://metaclip-interpreter.predictia.es/) in the R environment, specially tailored (although not restricted) to efficiently deal with the specificities of [`climate4R`](http://www.meteo.unican.es/climate4r), allowing for an easier abstraction of command calls and data structures to the entities defined in the [METACLIP vocabularies](https://github.com/Predictia/metaclip).
