@@ -4,7 +4,8 @@
 \alias{embedFig}
 \title{Generate a figure bitmap file with embedded metadata}
 \usage{
-embedFig(plot.fun, arg.list, full.metadata, format = "png", filename, ...)
+embedFig(plot.fun, arg.list, full.metadata, format = "png", filename,
+  ...)
 }
 \arguments{
 \item{plot.fun}{Character. Name of the plotting function}
@@ -64,3 +65,4 @@ Other graphical.outputs: \code{\link{graph2json}}
 \author{
 J. Bedia
 }
+\concept{graphical.outputs}
