@@ -25,4 +25,5 @@ Other getProperty.helpers: \code{\link{getHasAbsoluteThreshold}},
 \author{
 J Bedia
 }
+\concept{getProperty.helpers}
 \keyword{internal}
