@@ -30,3 +30,4 @@ Other graph.helpers: \code{\link{getNodeAttributes}},
 \author{
 J Bedia
 }
+\concept{graph.helpers}
