@@ -4,8 +4,9 @@
 \alias{metaclipR.SpatialExtent}
 \title{Set a reference SpatialExtent}
 \usage{
-metaclipR.SpatialExtent(xyCoords, region = NULL, xmin = NULL, xmax = NULL,
-  ymin = NULL, ymax = NULL, proj = NULL, resX = NULL, resY = NULL)
+metaclipR.SpatialExtent(xyCoords, region = NULL, xmin = NULL,
+  xmax = NULL, ymin = NULL, ymax = NULL, proj = NULL,
+  resX = NULL, resY = NULL)
 }
 \arguments{
 \item{xyCoords}{Grid coordinates (i.e., the \code{$xyCoords} element of a \pkg{climate4R} object)}
@@ -35,7 +36,7 @@ A metaclipR list (igraph-class structure + terminal node name)
 }
 \description{
 Creates a graph containing a SpatialExtent definition, that can be used later as spatial reference of
-suubsetting, regridding operations etc. so all steps point to the same reference spatial extent
+subsetting, regridding operations etc. so all steps point to the same reference spatial extent
 }
 \author{
 J Bedia
